fix alignment of toolbar items

--- a/assets/src/bundles/app/css/components/toolbar.scss
+++ b/assets/src/bundles/app/css/components/toolbar.scss
@@ -2,4 +2,5 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  border: 1px dashed red;
 }
